--- a/admin/css/ultimate-member-discord-add-on-admin.css
+++ b/admin/css/ultimate-member-discord-add-on-admin.css
@@ -1,4 +1,313 @@
-/**
+ /**
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+.woo-discord-setting-tab {
+  margin-top: 25px;
+  display: block;
+  width: 90%;
+  overflow: hidden;
+}
+.woo-discord-setting-tab .woo-discord-tab.active {
+  background-color: #77a02e;
+  color: #fff;
+}
+.woo-discord-setting-tab .woo-discord-tab {
+  float: left;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+  border-bottom: 1px solid transparent;
+  border: 1px solid #ccc;
+  margin-bottom: -1px;
+  background: #fff;
+  overflow: hidden;
+}
+.wc-discord-tab-conetent {
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top-color: rgb(204, 204, 204);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top: none;
+  background: #fff;
+  border-top: 1px solid #ccc;
+}
+.ets-discord-input-group {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.ets-discord-input-group label {
+  margin-bottom: 10px;
+  font-size: 14px;
+  display: block;
+  font-weight: 500;
+  color: #000;
+}
+.ets-discord-input-group input {
+  width: 100%;
+  height: 40px;
+}
+.ets-btn-submit {
+  background-color: #77A02E;
+  color: #ffffff;
+  padding: 10px 20px;
+  font-size: 14px;
+  box-shadow: 0px 0px 0px 0px;
+  border: 0px
+}
+
+/*support form css*/
+a{
+text-decoration: none;
+}
+.contact-form{
+min-height: 100vh;
+background-color: #f1f1f1;
+}
+.pr-100{
+padding-right: 100px;
+}
+.ets-mt-5{
+margin-top: 3rem !important;
+}
+.ets-align-items-center{
+align-items: center;
+}
+.ets-container{
+max-width: 1140px;
+display: block;
+margin:auto;
+}
+.contact-form{
+display: inline-block;
+width: 100%;
+padding:50px 0px;
+text-align: center;
+}
+.ets-row{
+display: flex;
+flex-wrap: wrap;
+margin-right: -15px;
+margin-left:-15px;
+}
+.ets-col-7 {
+flex: 0 0 58.333333%;
+max-width: 58.333333%;
+padding: 0px 15px;
+box-sizing: border-box;
+}
+.ets-col-3{
+flex: 0 0 25%;
+max-width: 25%;
+padding: 0px 15px;
+box-sizing: border-box;
+}
+.ets-offset-md-1{
+margin-left: 8.333333%;
+}
+.ets-form-group{
+margin-bottom: 16px;
+}
+.contact-form .top-logo-title img{
+width: 200px;
+}
+.contact-form .top-logo-title h1{
+margin: 30px 0 20px;
+font-size: 29px;
+font-weight: 700;
+}
+.contact-form .top-logo-title p{
+font-size: 14px;
+color: #232323;
+}
+.contact-fields .contact-input{
+display: block;
+height: 40px;
+width: 100%;
+padding: .375rem .75rem;
+font-size: 14px;
+border-radius: 0px !important;
+box-sizing: border-box;
+}
+.contact-input:hover{
+ border-bottom: 2px solid #77a02e;
+}
+.contact-fields label{
+font-size: 14px;
+margin-bottom: 5px;
+}
+.contact-textarea:hover{
+border-bottom: 2px solid #77a02e;
+}
+.contact-textarea{
+display: block;
+width: 100%;
+height: 65px;
+background-color: #fff;
+box-shadow: 0px 0px 0px 0px;
+border: 1px solid #ced4da;
+box-sizing: border-box;
+border-radius: 0px !important;
+}
+.right-side-box{
+position: relative;
+min-height: 150px;
+background-color: #444;
+margin-left: -90px;
+padding: 20px 15px;
+}
+.contact-fields{
+display: inline-block;
+width: 100%;
+padding: 35px 100px 35px 15px;
+background-color: #fff;
+text-align: left; 
+box-sizing: border-box;
+}
+.top-icon-title i{
+font-size: 26px;
+color: #fff;
+margin-right: 15px;
+}
+.top-icon-title p{
+margin: 0px;
+font-size: 16px;
+font-weight: 600;
+color: #fff;
+}
+.contact-details .contact-body p{
+font-size: 14px;
+margin-bottom: 5px;
+color: #fff;
+text-align: left;
+}
+.contact-details .contact-body p a{
+color:#fff;
+}
+.contact-details{
+display: inline-block;
+width: 100%;
+margin-bottom: 20px;
+}
+.contact-details .top-icon-title{
+display: inline-flex;
+align-items: center;
+width: 100%;
+}
+.contact-details .contact-body{
+margin-top: 16px;
+}
+.submit-btn{
+display: flex;
+align-items: center;
+width: 100%;
+padding-top: 16px;
+}
+.contact-form .btn-submit{
+background-color: #444;
+color: #fff;
+border-radius: 0px;
+padding: 10px 20px;
+font-size: 14px;
+border:1px solid transparent;
+}
+.contact-form .btn-submit:hover, .contact-form .btn-submit:focus{
+background-color: #fff;
+color: #444;
+border: 1px solid #444;
+box-shadow: 0px 0px 0px;
+}
+.btn-skype{
+background-color: #0078d7;
+color: #fff;
+border-radius: 0px;
+padding: 10px 20px;
+font-size: 14px;
+border:1px solid transparent;
+margin-left: auto
+}
+.btn-skype:hover,.btn-skype:focus{
+background-color: #fff;
+color: #0078d7;
+border-color:  #0078d7; 
+}
+.ets-danger-text{
+color: #FF0000 !important;
+}
+.top-icon-title svg{
+margin-right: 5px;
+}
+/*end support form css*/
+
+/*role map form css*/
+
+.discord-roles-col {
+border: 2px dashed transparent;
+transition: ease .3s;
+}
+.ets-column {
+float: left;
+width: 47%;
+padding: 10px;
+height: auto;
+text-align: center;
+min-height: 300px;
+}
+.makeMeDroppable {
+background-color: #77a02e;
+margin-bottom: 10px;
+color: #fff;
+text-align: center;
+display: flex;
+}
+.makeMeDraggable {
+background-color: #275ee8;
+padding: 10px;
+color: #fff;
+margin-bottom: 10px;
+cursor: all-scroll;
+}
+.notice.ets-notice {
+background-color: rgba(51,170,51,.1);
+margin-bottom: 10px;
+}
+.ets-bg-red {
+background-color: red !important;
+color: #fff;
+}
+.ets-bg-green {
+background-color: #77a02e !important;
+color: #fff;
+}
+.bottom-btn {
+margin-top: 10px;
+text-align: center;
+}
+#maaping_json_val {
+width: 50%;
+display: none;
+
+}
+#skeletabsTab2 {
+.box-sizing: border-box;
+
+}
+
+/*error log tab css*/
+
+.clear-log-btn-div {
+  max-width: 230px;
+  display: flex;
+}
+.ets-bg-download {
+  background-color: #2ca450 !important;
+  color: #fff;
+}
+.error-log {
+  height: 400px;
+  overflow: scroll;
+}
