--- a/admin/css/ultimate-member-discord-add-on-admin.css
+++ b/admin/css/ultimate-member-discord-add-on-admin.css
@@ -2,39 +2,8 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
-.woo-discord-setting-tab {
-  margin-top: 25px;
-  display: block;
-  width: 90%;
-  overflow: hidden;
-}
-.woo-discord-setting-tab .woo-discord-tab.active {
-  background-color: #77a02e;
-  color: #fff;
-}
-.woo-discord-setting-tab .woo-discord-tab {
-  float: left;
-  outline: none;
-  cursor: pointer;
-  padding: 14px 16px;
-  transition: 0.3s;
-  font-size: 17px;
-  border-bottom: 1px solid transparent;
-  border: 1px solid #ccc;
-  margin-bottom: -1px;
-  background: #fff;
-  overflow: hidden;
-}
-.wc-discord-tab-conetent {
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top-color: rgb(204, 204, 204);
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-top: none;
-  background: #fff;
-  border-top: 1px solid #ccc;
-}
+
+
 .ets-discord-input-group {
   display: inline-block;
   width: 100%;
@@ -50,6 +19,10 @@
 .ets-discord-input-group input {
   width: 100%;
   height: 40px;
+  border-radius: 0px !important;
+}
+.ets-input:hover{
+  border-bottom: 2px solid #77a02e;
 }
 .ets-btn-submit {
   background-color: #77A02E;
@@ -378,4 +351,9 @@ box-sizing: border-box;
 }
 .ets_ultimate-member_discord_dm_textarea {
     height: 150px;
+}
+img.discord-logo-white{
+    width: 20px;
+    display: inline-block;
+    margin-left: 5px;
 }
