--- a/admin/css/ultimate-member-discord-add-on-admin.css
+++ b/admin/css/ultimate-member-discord-add-on-admin.css
@@ -25,12 +25,15 @@
   border-bottom: 2px solid #77a02e;
 }
 .ets-btn-submit {
-  background-color: #77A02E;
-  color: #ffffff;
-  padding: 10px 20px;
-  font-size: 14px;
-  box-shadow: 0px 0px 0px 0px;
-  border: 0px
+    padding: 10px 20px;
+    background: #444;
+    color: #fff;
+    font-size: 14px;
+    box-shadow: 0px 0px 0px 0px;
+    border: 0px;
+}
+.ultimatemember-btn-connect-to-bot{
+ background-color: #FF0000;
 }
 
 /*support form css*/
@@ -314,6 +317,12 @@ box-sizing: border-box;
   text-decoration: none;
   background-color:#77A02E;
   color: #ffffff;
+}
+.ets-btn-submit.error-bk {
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
+  background-color:#FF0000;
 }
 
 /*error log tab css*/
