--- a/admin/css/ultimate-member-discord-add-on-admin.css
+++ b/admin/css/ultimate-member-discord-add-on-admin.css
@@ -405,3 +405,13 @@ p.redirect-url{
     padding: 10px 10px;
     background-color: #fafafa;    
 }
+.select2-selection__rendered {
+    line-height: 34px !important;
+    font-size: 14px;
+}
+.select2-container .select2-selection--single {
+    height: 40px !important;
+}
+.select2-selection__arrow {
+    height: 40px !important;
+}
