Display Roles's color in connect/disconnect button

--- a/public/css/ultimate-member-discord-add-on-public.css
+++ b/public/css/ultimate-member-discord-add-on-public.css
@@ -50,3 +50,20 @@ a.ultimate-member-btn-connect img{
     margin-left: 5px;
     
 }
+ .ets_assigned_role > span{
+    padding: 0px 7px;
+    border-radius: 12px;
+    color: #fff;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center; 
+    background-color: #878787;
+    margin-right: 5px;
+ }
+ .ets_assigned_role > span > i{
+    width: 14px;
+    height: 14px;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 6px;     
+ }
