Update bg color role

--- a/public/css/ultimate-member-discord-add-on-public.css
+++ b/public/css/ultimate-member-discord-add-on-public.css
@@ -57,7 +57,7 @@ a.ultimate-member-btn-connect img{
     display: inline-flex;
     flex-direction: row;
     align-items: center; 
-    background-color: #878787;
+    background-color: #28303d;
     margin-right: 5px;
  }
  .ets_assigned_role > span > i{
