--- a/public/css/ultimate-member-discord-add-on-public.css
+++ b/public/css/ultimate-member-discord-add-on-public.css
@@ -67,3 +67,14 @@ a.ultimate-member-btn-connect img{
     border-radius: 50%;
     margin-right: 6px;     
  }
+ img.ets_discord_user_avatar{
+  border-radius: 50% !important;
+  width: 45px;
+  height: auto;
+  display: inline-block;
+  margin-left: 10px;
+}
+div.um-field-area > p{
+  font-size: 1rem;
+
+}
