--- a/admin/css/ultimate-member-discord-add-on-admin.css
+++ b/admin/css/ultimate-member-discord-add-on-admin.css
@@ -450,3 +450,13 @@ div.ets-ultimate-member-discord-review-notice div.ets-ultimate-member-discord-no
 div.ets-ultimate-member-discord-review-notice div.ets-ultimate-member-discord-notice-content{
   padding: 20px;
 }
+div.ets-ultimate-member-discord-review-notice div.ets-ultimate-member-discord-notice-content p.ets-ultimate-member-discord-signature {
+  display: flex; 
+  align-items: center;
+}
+div.ets-ultimate-member-discord-review-notice div.ets-ultimate-member-discord-notice-content img{
+  width: 45px;
+  height: auto;
+  border-radius: 50%;
+  margin-left: 15px;
+}
